--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
 
       <h1><strong>CONTACT US</strong></h1>
       
-      <input type="text" placeholder="Username" required>
-      <input type="email" placeholder="Email" required>
-      <input type="text" placeholder="Your Message" required>
+      <input type="text" name="username" placeholder="Username" required>
+      <input type="email" name="email" placeholder="Email" required>
+      <input type="text" name="message" placeholder="Your Message" required>
       <button>Submit</button>
 
     </td>
