Modified the text

--- a/index.html
+++ b/index.html
@@ -78,31 +78,31 @@
       <td align="center">
        <img src="IMG/ylber.webp" align="center"> 
        <h2>Ylber Veliu</h2>
-       <h5>Software Engeener</h5>
+       <h5>Software Engineer</h5>
       </td>
 
       <td align="center">
         <img src="IMG/ylber.webp" align="center"> 
         <h2>Ylber Veliu</h2>
-        <h5>Software Engeener</h5>
+        <h5>Software Engineer</h5>
       </td>
 
        <td align="center">
         <img src="IMG/ylber.webp" align="center"> 
         <h2>Ylber Veliu</h2>
-        <h5>Software Engeener</h5>
+        <h5>Software Engineer</h5>
        </td>
 
        <td align="center">
         <img src="IMG/ylber.webp" align="center"> 
         <h2>Ylber Veliu</h2>
-        <h5>Software Engeener</h5>
+        <h5>Software Engineer</h5>
        </td>
 
        <td align="center">
         <img src="IMG/ylber.webp" align="center"> 
         <h2>Ylber Veliu</h2>
-        <h5>Software Engeener</h5>
+        <h5>Software Engineer</h5>
        </td>
 
     <table width="1500px">
