--- a/index.html
+++ b/index.html
@@ -76,31 +76,31 @@
   <table width="1024px" align="center">
     <tr>
       <td align="center">
-       <img src="IMG/ylber.webp" align="center"> 
+       <img src="IMG/ylber.webp" > 
        <h2>Ylber Veliu</h2>
        <h5>Software Engineer</h5>
       </td>
 
       <td align="center">
-        <img src="IMG/ylber.webp" align="center"> 
+        <img src="IMG/ylber.webp" > 
         <h2>Ylber Veliu</h2>
         <h5>Software Engineer</h5>
       </td>
 
        <td align="center">
-        <img src="IMG/ylber.webp" align="center"> 
+        <img src="IMG/ylber.webp"> 
         <h2>Ylber Veliu</h2>
         <h5>Software Engineer</h5>
        </td>
 
        <td align="center">
-        <img src="IMG/ylber.webp" align="center"> 
+        <img src="IMG/ylber.webp"> 
         <h2>Ylber Veliu</h2>
         <h5>Software Engineer</h5>
        </td>
 
        <td align="center">
-        <img src="IMG/ylber.webp" align="center"> 
+        <img src="IMG/ylber.webp"> 
         <h2>Ylber Veliu</h2>
         <h5>Software Engineer</h5>
        </td>
