--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         <h5>Software Engineer</h5>
        </td>
 
+    </table>   
+
     <table width="1500px">
 
       <br><br><br><br><br><br><br><br>
