--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
       
       <input type="text" name="username" placeholder="Username" required>
       <input type="email" name="email" placeholder="Email" required>
-      <input type="text" name="message" placeholder="Your Message" required>
+      <input type="text" name="yourmessage" placeholder="Your Message" required>
       <button>Submit</button>
 
     </td>
