--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
       </td>  
 
-      <td> <a style="text-decoration: none" <a href="#home">HOME</a></td>
-      <td> <a style="text-decoration: none" <a href="#services">SERVICES</a></td>
-      <td> <a style="text-decoration: none" <a href="#team">TEAM</a></td>
-      <td> <a style="text-decoration: none" <a href="#ourstory">OUR STORY</a></td>
+      <td> <a href="#home">HOME</a></td>
+      <td> <a href="#services">SERVICES</a></td>
+      <td> <a href="#team">TEAM</a></td>
+      <td> <a href="#ourstory">OUR STORY</a></td>
 
     </tr>
 
