--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   
   <br>
 
-  <table id="home" width="1024px" align="center">
+  <table width="1024px" align="center">
 
     <tr>
 
@@ -69,7 +69,7 @@
 
   <br><br><br><br>
  
-  <h1 id="team" align="center">TEAM</h1>
+  <h1 align="center">TEAM</h1>
 
   <br><br><br>
 
