--- a/index.html
+++ b/index.html
@@ -116,15 +116,13 @@
 
           <img src="IMG/team.webp" width="800px" alt="Our team">
 
-
-
         </td>
 
         <td width="50px"></td>
 
         <td>
 
-          <h1 id="ourstory">Our story</h1>
+          <h1>Our story</h1>
 
           <h4>Our company was founded in 2023 with a mission to help businesses establish a strong online presence. As a team of experienced web developers, we saw firsthand how important it was for businesses to have a website that not only looked good, but also functioned well and delivered measurable results.</h4>
 
